force-app/main/default/objects/Community_Group_Control_Tag__c/Community_Group_Control_Tag__c.object-meta.xml
<CustomObject>
    <description>This object allows tags to be associated with a Group Control record.</description>
    <label>Community Group Control Tag</label>
    <nameField>
        <displayFormat>CGCT-{yy}{mm}{0}</displayFormat>
        <label>Community Group Control Tag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Control Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>