force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Community_Tag__c.field-meta.xml
<CustomField>
    <fullName>Community_Tag__c</fullName>
    <description>This defines the Tag that is being associated to the Group Control</description>
    <label>Community Tag</label>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>Group Items Tagged</relationshipLabel>
    <relationshipName>Community_GroupItems_Tagged</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>