force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Group_Control__c.field-meta.xml
<CustomField>
    <fullName>Group_Control__c</fullName>
    <description>This field defines the Group that tags will be associated with</description>
    <label>Group Control</label>
    <referenceTo>Community_Group_Control__c</referenceTo>
    <relationshipLabel>Group Tags</relationshipLabel>
    <relationshipName>Community_Group_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>