force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Group_Discoverable__c.field-meta.xml
<CustomField>
    <fullName>Group_Discoverable__c</fullName>
    <description>Indicates if the related Group item is discoverable to all Community User&#39;s.</description>
    <formula>Group_Control__r.Discoverable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the related Group item is discoverable to all Community User&#39;s.</inlineHelpText>
    <label>Group Discoverable</label>
    <type>Checkbox</type>
</CustomField>