force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Group_Status__c.field-meta.xml
<CustomField>
    <fullName>Group_Status__c</fullName>
    <description>Represents the Status of the related Group item.</description>
    <formula>TEXT( Group_Control__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of the related Group item.</inlineHelpText>
    <label>Group Status</label>
    <type>Text</type>
</CustomField>