force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <description>Represents the Group Type of the related Group item.</description>
    <formula>TEXT( Group_Control__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Title of the related Group.</inlineHelpText>
    <label>Group Type</label>
    <type>Text</type>
</CustomField>