force-app/main/default/objects/Community_Group_Control_Tag__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Represents the Name of the Theme related to the Tag.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;&quot;Community_Tag__r.Community_Theme__r.Id&quot;,  Community_Tag__r.Community_Theme__r.Name  ,&#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the Name of the Theme related to the Tag.</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>